# python-template

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Taskfile.yml  pyproject.toml
src/my_project/: __main__.py
src/your_app_name/: __main__.py
tests/: test_sample.py
