[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pytest>=8.3.4",
    "python-dotenv>=1.0.1",
    "ruff>=0.9.5",
]

[tool.ruff.lint]
select = [
    "B", # flake8-bugbear
    "E", # pycodestyle
    "F", # Pyflakes
    "I", # isort
    "SIM", # flake8-simplify
    "UP", # pyupgrade
]
