[project]
name = "python-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "python-dotenv>=1.0.1",
]

[tool.mypy]
python_version = "3.11"
show_error_context = true  # エラー時の詳細情報を表示
show_column_numbers = true  # エラー発生箇所の列番号を表示
disallow_untyped_defs = true  # 型注釈のない関数定義を許可しない
no_implicit_optional = true  # デフォルトで None を許容しない
check_untyped_defs = true  # 型注釈のない関数もチェック
warn_redundant_casts = true  # 冗長なキャストに警告

[tool.ruff]
target-version = "py311"  # 対象とするPythonのバージョン
select = ["E", "F", "W", "B", "I"]  # 有効にするルール
ignore = []  # 無視するルール

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pre-commit>=4.1.0",
    "pytest>=8.3.4",
    "ruff>=0.9.6",
]
